[tool.poetry]
name = "megatutorial"
version = "0.1.0"
description = "Yet another microblog"
authors = ["Robert Idiatulin"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1"
flake8 = "^3.7"
flask-wtf = "^0.14.2"
flask-sqlalchemy = "^2.4"
flask-migrate = "^2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
